--- a/contact.html
+++ b/contact.html
@@ -46,16 +46,16 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-youtube"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-soundcloud"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud"></i></a>
                     </li>
                 </ul>
             </div>
@@ -102,7 +102,7 @@
             <h3>Join Our Mailing List! <i class="fas fa-envelope-open-text"></i></h3>
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name">
+                <input type="text" class="form-control" id="name" name="name" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
@@ -122,16 +122,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
                 </li>
             </ul>
         </div>
