--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                 </ul>
                 <ul class="navbar-nav ml-auto flex-row" id="social-links">
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-youtube"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
                     </li>
                     <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-soundcloud"></i></a>
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud"></i></a>
                     </li>
                 </ul>
             </div>
@@ -90,9 +90,9 @@
 
             <div class="col-12 col-md-4 cta">
                 <div class="cta-content">
-                    <h2>DEBUT EP <i class="fas fa-record-vinyl"></i></h2>
+                    <h2>DEBUT EP <i class="fas fa-compact-disc"></i></h2>
                     <a class="btn btn-primary btn-lg" href="http://www.oddsocksband.bandcamp.com/" role="button"
-                        target="_blank">Buy Now</a>
+                        target="_blank" rel="external">Buy Now</a>
                 </div>
             </div>
 
@@ -190,16 +190,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
                 </li>
             </ul>
         </div>
