--- a/music.html
+++ b/music.html
@@ -41,16 +41,16 @@
                     </ul>
                     <ul class="navbar-nav ml-auto flex-row" id="social-links">
                         <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
+                            <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-facebook"></i></a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-youtube"></i></a>
+                            <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-youtube"></i></a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-instagram"></i></a>
+                            <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-instagram"></i></a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-soundcloud"></i></a>
+                            <a href="#" target="_blank" rel="external" class="nav-link"><i class="fab fa-soundcloud"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -119,16 +119,16 @@
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
             <ul id="footer-social" class="page-footer">
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-youtube"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="#" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                    <a href="#" target="_blank" rel="external"><i class="fab fa-soundcloud"></i></a>
                 </li>
             </ul>
         </div>
