style: headings on music page

--- a/music.html
+++ b/music.html
@@ -59,14 +59,12 @@
     <!-- End of navbar --> 
     </header>
 
-
-    <div class="hero-bg">
     <h1 class="appear-first">Music</h1>
     
     <!-- Embedded SoundCloud playlist section -->
 
     <section class="container music-content appear-second">
-            <h3>SoundCloud</h3>
+            <h2 class="music-heading">SoundCloud <i class="fab fa-soundcloud" id="soundcloud-logo"></i></h2>
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
@@ -77,11 +75,13 @@
     </section>
 
     <!-- End of embedded SoundCloud playlist section -->
-
+    <div class="container">
+    <hr>
+    </div>
     <!-- Embedded YouTube video section -->
 
     <section class="container music-content appear-second">
-            <h3>YouTube</h3>
+            <h2 class="music-heading">YouTube <i class="fab fa-youtube" id="youtube-logo"></i></h2>
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8"><iframe id="youtube-iframe" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen><p>Your device does not support iframes</p></iframe></div>
@@ -90,11 +90,13 @@
     </section>
 
     <!-- End of embedded YouTube video section -->
-
+    <div class="container">
+    <hr>
+    </div>
     <!-- Available releases section -->
 
     <section class="container music-content appear-second">
-        <h2 class="mx-auto">Releases</h2>
+        <h2 class="music-heading">Releases <i class="fas fa-compact-disc"></i></h2>
         <div class="row">
 
             <div class="col-12">
@@ -110,7 +112,6 @@
         </div>
 
     </section>
-    </div>
     <!-- End of available releases section -->
  
     <!-- Footer -->
