add: band image to releases section and center content

--- a/music.html
+++ b/music.html
@@ -101,10 +101,11 @@
 
             <div class="col-12">
                 <div class="card mx-auto" style="width: 18rem;">
-                    <a href="https//www.bandcamp.com"><img src="assets/images/hero-placeholder.jpg" class="card-img-top" alt="Happy Lane EP purchase link"></a>
+                    <a href="https//www.bandcamp.com"><img src="assets/images/hero-image-min.jpg" class="card-img-top" alt="Little Paradise EP purchase link"></a>
                     <div class="card-body">
-                        <h3 class="card-text">Happy Lane EP (2021)</h3>
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
+                        <h3 class="text-center">Little Paradise EP</h3>
+                        <p class="card-text text-center">(2021)</p>
+                        <a class="btn btn-primary btn-lg justify-content-center" id="buy-now" href="#" role="button">Buy Now</a>
                     </div>
                 </div>
             </div>
