--- a/gallery.html
+++ b/gallery.html
@@ -63,41 +63,41 @@
         <section id="gallery" class="container-fluid appear-second">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/hero-placeholder.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/mikeguitar.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise10.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/mike1.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise2.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/fran.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise3.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/guitarpedals.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise4.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise5.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/mike3.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise6.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/littleparadisesign2.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise7.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/franguitar.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise8.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/youownme.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise9.jpg" alt="" class="img-fluid">
+                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadise9.jpg" alt="" class="img-fluid">
-                </div>
+                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
+                </div>             
             </div>
         </section>
  
