amend: structure of gallery, add new photos

--- a/gallery.html
+++ b/gallery.html
@@ -62,42 +62,42 @@
         <h1 class="appear-first">Gallery</h1>
         <section id="gallery" class="container-fluid appear-second">
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                <div class="col-12 col-lg-6 col-xl-3 photo">
                     <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/mikeguitar.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/mike1.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                <div class="col-12 col-lg-6 col-xl-3 photo">
                     <img src="assets/images/fran.jpg" alt="" class="img-fluid">
+                </div>              
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/gauntlet.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/guitarpedals.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/mike3.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/littleparadisesign2.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                <div class="col-12 col-lg-6 col-xl-3 photo">
                     <img src="assets/images/franguitar.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/mike1.jpg" alt="" class="img-fluid">
+                </div> 
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/mikeguitar.jpg" alt="" class="img-fluid">
+                </div> 
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/guitarpedals.jpg" alt="" class="img-fluid">
+                </div>  
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/mike3.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-lg-6 col-xl-3 photo">
                     <img src="assets/images/youownme.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/fran3.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 photo">
-                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
-                </div>             
+                <div class="col-12 col-lg-6 col-xl-3 photo">
+                    <img src="assets/images/littleparadisesign2.jpg" alt="" class="img-fluid">
+                </div>        
             </div>
         </section>
  
