amend: minor copy changes, rename photos

--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
     <section class="container appear-second" id="about-section">
         <div class="row">
             <div class="col-lg-7">
-                <img src="assets/images/littleparadise13.jpg" alt="" class="img-fluid about-image">
-                <img src="assets/images/littleparadise10.jpg" alt="" class="img-fluid dissapear about-image"> 
+                <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid about-image">
+                <img src="assets/images/fran.jpg" alt="" class="img-fluid dissapear about-image"> 
             </div>
             <div class="col-lg-5">
                 <article>
@@ -90,9 +90,7 @@
                         the rock genre in.
                         The conclusion they reached was to remain firmly in 2005, record as much material as possible,
                         and pray that people will soon feel the same nostalgia for the noughties that is inexplicably
-                        directed towards the 80s and 90s. 
-                        The moment those warm delusional nostalgia goggles move from Stranger Things episodes to 
-                        overcrowded, sweaty festival tents, the band intends on aggressively cashing in.
+                        directed towards the 80s and 90s - at which point they will aggressively cash in.
                     </p>
                     <hr>
                     <aside>
@@ -107,7 +105,7 @@
                 </article>
             </div>       
             <div class="col d-lg-none d-md-block">
-                <img src="assets/images/littleparadise10.jpg" alt="" class="img-fluid about-image">   
+                <img src="assets/images/fran.jpg" alt="" class="img-fluid about-image">   
             </div>
         </div>
     </section>
