add: background image to index.html as test

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
     <hr>
 
+    <div class="background-image container-fluid">
     <section class="container appear-third" id="index-music">
         <div class="row">
             <div class="col-lg-2"></div>
@@ -125,7 +126,7 @@
             <div class="col-lg-2"></div>
         </div>
     </section>
-
+    </div>
     <hr>
     <!-- Tour dates -->
     <section class="container" id="tour-dates">
@@ -183,7 +184,7 @@
         <br>
     </section>
     <!-- End of tour dates -->
-
+    
     <!-- Footer -->
     <footer class="page-footer">
         <div>
