--- a/gallery.html
+++ b/gallery.html
@@ -1,107 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Little Paradise Music</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <!-- Navbar -->
-        
-            <nav class="navbar navbar-light navbar-expand-md fixed-top">
-                <a href="index.html" class="navbar-brand">Little Paradise</a>
 
-                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <nav class="navbar navbar-light navbar-expand-md fixed-top">
+            <a href="index.html" class="navbar-brand">Little Paradise</a>
 
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav mx-auto" id="navigation-links">
-                        <li class="nav-item mr-2">
-                            <a href="index.html#tour-dates" class="nav-link">Tour</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a href="music.html" class="nav-link">Music</a>
-                        </li>
-                        <li class="nav-item mr-2 active">
-                            <a href="gallery.html" class="nav-link">Gallery</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a href="about.html" class="nav-link">About</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a href="contact.html" class="nav-link">Contact</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto flex-row" id="social-links">
-                        <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-soundcloud"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <!-- End of navbar --> 
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mx-auto" id="navigation-links">
+                    <li class="nav-item mr-2">
+                        <a href="index.html#tour-dates" class="nav-link">Tour</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="music.html" class="nav-link">Music</a>
+                    </li>
+                    <li class="nav-item mr-2 active">
+                        <a href="gallery.html" class="nav-link">Gallery</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="about.html" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="contact.html" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto flex-row" id="social-links">
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-youtube"></i></a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link" rel="external"><i
+                                class="fab fa-soundcloud"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- End of navbar -->
     </header>
 
-        <h1 class="appear-first">Gallery</h1>
-        <section id="gallery" class="container-fluid appear-second">
-            <div class="row">
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/fran.jpg" alt="" class="img-fluid">
-                </div>              
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/gauntlet.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/franguitar.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/mike1.jpg" alt="" class="img-fluid">
-                </div> 
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/mikeguitar.jpg" alt="" class="img-fluid">
-                </div> 
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/guitarpedals.jpg" alt="" class="img-fluid">
-                </div>  
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/mike3.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/hero-image-min.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/youownme.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/fran3.jpg" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-lg-6 col-xl-3 photo">
-                    <img src="assets/images/littleparadisesign2.jpg" alt="" class="img-fluid">
-                </div>        
+    <h1 class="appear-first">Gallery</h1>
+    <section id="gallery" class="container-fluid appear-second">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/fran.jpg" alt="" class="img-fluid">
             </div>
-        </section>
- 
-        <!-- Footer -->
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/franguitar.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/lpstudio.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/gauntlet.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/fran.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/youownme.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/fran.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/franguitar2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/lea.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/littleparadisesign.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/niceview.jpg" alt="" class="img-fluid">
+            </div>
+
+
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/lpstudio2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike3.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mikeguitar.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/guitarpedals.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike4.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/fran4.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike5.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/fran4.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike6.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3 photo">
+                <img src="assets/images/mike7.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer class="page-footer">
         <div>
             <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
@@ -121,12 +165,21 @@
             </ul>
         </div>
     </footer>
-        <!-- End of footer + page -->
+    <!-- End of footer + page -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
